--- a/.env
+++ b/.env
@@ -4,4 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://superalso:superalso@localhost:5432/lv_base_app?schema=public"
+DATABASE_URL="postgresql://postgres:123456@localhost:5432/lv_base_app?schema=public"
+PORT=9000
+
+#JWT
+ACCESS_TOKEN_SECRET_KEY='wdjhwdhwdwd2ieh2idwjdnwjdwjdwjdd=wdwd2kpe2-e2oe-2=e2dwlkdwk121211pw%%w3199jj1'
+ACCESS_TOKEN_EXPIRES_IN='300s'
+REFRESH_TOKEN_SECRET_KEY='wdjhwdhwdwd2ieh2idwjdnwjdwjdwjdd=wdwd2kpe2-e2oe-2=e2dwlkdwk121211pw%%w3199jj1'
+REFRESH_TOKEN_EXPIRES_IN='1h'
