--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/passport-local": "^1.0.34",
     "argon2": "^0.30.2",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
