--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123456@localhost:5432/lv_base_app?schema=public"
+DATABASE_URL="postgresql://superalso:123456@localhost:5432/lv_base_app?schema=public"
 PORT=9000
 
 #JWT
